2009-11-24  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	* flumotion.spec.in:
	* flumotion/extern/Makefile.am:
	Require at least pygtk 2.10
	* flumotion/ui/trayicon.py:
	Use only gtk.StatusIcon.
	* flumotion/extern/pytrayicon (deleted):
	* flumotion/extern/pytrayicon/pytrayicon.override (deleted):
	* flumotion/extern/pytrayicon/eggtrayicon.h (deleted):
	* flumotion/extern/pytrayicon/pytrayicon.defs (deleted):
	* flumotion/extern/pytrayicon/ltihooks.py (deleted):
	* flumotion/extern/pytrayicon/__init__.py (deleted):
	* flumotion/extern/pytrayicon/pytrayiconmodule.c (deleted):
	* flumotion/extern/pytrayicon/Makefile.am (deleted):
	* flumotion/extern/pytrayicon/config.h (deleted):
	* flumotion/extern/pytrayicon/eggtrayicon.c (deleted):
	Remove pytrayicon.

2009-11-25  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Do not import IStateCacheableListener from flumotion.twisted.flavors,
	as this module is not bundled. It seems that the price of breaking
	compatibility between old workers and new managers is too high for the
	small gain of having the component implement the interface.

2009-11-25  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/test_cache_manager.py:
	* flumotion/test/test_component_httpserver_httpcached_stats.py:
	* flumotion/test/test_component_providers.py:
	In t2.0.1, ThreadPool() takes at most 3 arguments.

2009-11-24  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Fix make check on buildbot, wait for CopySession to close().
	* flumotion/test/test_component_httpserver_httpcached_stats.py:
	Don't use hardcoded port, use ListenTCP(0) instead.

2009-11-24  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/test/test_component_httpserver_httpcached_stats.py:
	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	Should fix the make check on the build-bot.
