@@ -1,7 +1,7 @@
-%define         gst_minver      0.10.10
-%define         gstpb_minver    0.10.10
-%define         gstpy_minver    0.10.4
-%define         pygtk_minver    2.10.0
+%define         gst_minver      @GST_010_REQ@
+%define         gstpb_minver    @GST_010_REQ@
+%define         gstpy_minver    @PYGST_010_REQ@
+%define         pygtk_minver    @PYGTK_010_REQ@
 %define         kiwi_minver     1.9.13
 
 %{!?gstreamer:  %define         gstreamer       gstreamer}
